EEC_InitBackup/src/objects/License__c.object
<CustomObject>
    <description>Licenses object is used to manage license applications and provisional and full licenses.</description>
    <fields>
        <fullName>Afternoon_Days__c</fullName>
        <description>The days of operation for Provider&apos;s Afternoon operating schedule</description>
        <inlineHelpText>Use Control+Click to multi-select all of the days for Provider&apos;s Afternoon operating schedule</inlineHelpText>
        <label>Afternoon-Days</label>
        <picklist>
            <picklistValues>
                <fullName>Mon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fri</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Afternoon_End_Time__c</fullName>
        <description>The end time for Provider&apos;s Afternoon operating schedule</description>
        <inlineHelpText>Select the end time for the Provider&apos;s Afternoon operating schedule</inlineHelpText>
        <label>Afternoon-End Time</label>
        <picklist>
            <picklistValues>
                <fullName>12 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Afternoon_Start_Time__c</fullName>
        <description>The start time for Provider&apos;s Afternoon operating schedule</description>
        <inlineHelpText>Select the start time for the Provider&apos;s Afternoon operating schedule</inlineHelpText>
        <label>Afternoon-Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>12 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DPH_Summer_Camp_Permit__c</fullName>
        <description>Does Licensee hold a Dept. of Public Health Summer Camp permit?</description>
        <inlineHelpText>Does Licensee hold a Dept. of Public Health Summer Camp permit?</inlineHelpText>
        <label>DPH Summer Camp Permit?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drop_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Other Services Provided option for Large Group and Small Group</description>
        <label>Drop In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evening__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Other Services Provided option for Large Group and Small Group</description>
        <label>Evening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>License expiration date</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Extended_Days__c</fullName>
        <description>Other Services Provided option for Large Group and Small Group</description>
        <inlineHelpText>Use Control+Click to multi-select all of the days for Provider&apos;s Extended Days service</inlineHelpText>
        <label>Extended Days</label>
        <picklist>
            <picklistValues>
                <fullName>Mon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fri</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>FCC_Licensee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FCC Licensee is the person to whom is granted the FCC license and is identified in the FCC license application</description>
        <inlineHelpText>Select the FCC Licensee, the person to whom the FCC license is granted</inlineHelpText>
        <label>FCC Licensee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>License Applications (FCC Licensee)</relationshipLabel>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinancialAssistance__c</fullName>
        <description>Financial Assistance options for Provider clients</description>
        <label>FinancialAssistance</label>
        <picklist>
            <picklistValues>
                <fullName>Contracted Slots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCF Supportive Slots</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headstart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sibling Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sliding Fee Scale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teen Parent Slot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Way</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voucher</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>First_Issue_Date__c</fullName>
        <description>Date that first license was issued</description>
        <label>First Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_Day_End_Time__c</fullName>
        <description>The end time for Provider&apos;s Full Day operating schedule</description>
        <inlineHelpText>Select the end time for the Provider&apos;s Full Day operating schedule</inlineHelpText>
        <label>Full Day-End Time</label>
        <picklist>
            <picklistValues>
                <fullName>6 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Day_Start_Time__c</fullName>
        <description>The start time for Provider&apos;s Full Day operating schedule</description>
        <inlineHelpText>Select the start time for the Provider&apos;s Full Day operating schedule</inlineHelpText>
        <label>Full Day-Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>6 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Full_Day__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provider operation time-of-year value option</description>
        <inlineHelpText>Select if Provider intends to operate for the full day</inlineHelpText>
        <label>Full Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provider operation time value option</description>
        <inlineHelpText>Select if Provider intends to operate for the full year</inlineHelpText>
        <label>Full Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Half_day_Afternoon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provider operation time-of-year value option</description>
        <inlineHelpText>Select if Provider intends to operate for the afternoon only</inlineHelpText>
        <label>Half day-Afternoon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Half_day_Morning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provider operation time-of-day value option</description>
        <inlineHelpText>Select if Provider intends to operate for the morning only</inlineHelpText>
        <label>Half day-Morning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historic_License_No__c</fullName>
        <description>License No value carried over from legacy systems</description>
        <label>Historic License No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indoor__c</fullName>
        <description>Is the indoor portion of your program in compliance with American with Disabilities Act (ADA) requirements?</description>
        <inlineHelpText>Is the indoor portion of your program in compliance with American with Disabilities Act (ADA) requirements?</inlineHelpText>
        <label>Indoor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Infant_Toddler_birth_33mo__c</fullName>
        <description>Number of Infant/Toddler clients</description>
        <inlineHelpText>Enter the number of clients for this age group</inlineHelpText>
        <label>Infant/Toddler (birth-33mo)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Infant_birth_15mo__c</fullName>
        <description>Number of Infant clients</description>
        <inlineHelpText>Enter the number of clients for this age group</inlineHelpText>
        <label>Infant (birth-15mo)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kindergarten__c</fullName>
        <description>Number of Kindergarten clients</description>
        <inlineHelpText>Enter the number of clients for this age group</inlineHelpText>
        <label>Kindergarten</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_SG_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Required on LG and SG license application</description>
        <inlineHelpText>Select the LG or SG Administrator, required on the LG/SG license application</inlineHelpText>
        <label>LG/SG Administrator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Large Group, Small Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Licenses2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_SG_Licensee_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Required on LG and SG license application</description>
        <inlineHelpText>Select the Licensee Contact for the LG or SG license application</inlineHelpText>
        <label>LG/SG Licensee Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>License Applications (LG/SG Licensee Contact)</relationshipLabel>
        <relationshipName>Licenses1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude value for Provider address</description>
        <label>Latitude</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <description>License.License Status</description>
        <label>License Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <description>License Type values for Large Group and Small Group</description>
        <inlineHelpText>Select the appropriate License Type value</inlineHelpText>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Licensee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Move</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Licensee__c</fullName>
        <description>Name of owner or corporation</description>
        <inlineHelpText>Enter the name of the Provider owner, whether that be a person or a corporation</inlineHelpText>
        <label>Licensee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Longitude value for Provider location</description>
        <label>Longitude</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Meals__c</fullName>
        <description>Meals options for Provider clients</description>
        <label>Meals</label>
        <picklist>
            <picklistValues>
                <fullName>Afternoon Snack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dinner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning Snack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parents Provide Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parents Provide Lunch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Meal Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TEMP Morning Snack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USDA Food Program</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Morning_Days__c</fullName>
        <description>The days of operation for Provider&apos;s Morning operating schedule</description>
        <inlineHelpText>Use Control+Click to multi-select all of the days for Provider&apos;s Morning operating schedule</inlineHelpText>
        <label>Morning-Days</label>
        <picklist>
            <picklistValues>
                <fullName>Mon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fri</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Morning_End_Time__c</fullName>
        <description>The end time for Provider&apos;s Morning operating schedule</description>
        <inlineHelpText>Select the end time for the Provider&apos;s Morning operating schedule</inlineHelpText>
        <label>Morning-End Time</label>
        <picklist>
            <picklistValues>
                <fullName>6 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Morning_Start_Time__c</fullName>
        <description>The start time for Provider&apos;s Morning operating schedule</description>
        <inlineHelpText>Select the start time for the Provider&apos;s Morning operating schedule</inlineHelpText>
        <label>Morning-Start Time</label>
        <picklist>
            <picklistValues>
                <fullName>6 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multi_Age_Group_birth_14yr__c</fullName>
        <description>Number of Multi-Age Group clients</description>
        <inlineHelpText>Enter the number of clients for this age group</inlineHelpText>
        <label>Multi-Age Group (birth-14yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_EEC_Licenses__c</fullName>
        <description>Does Licensee hold any other EEC Licenses?</description>
        <inlineHelpText>Does Licensee hold any other EEC Licenses?</inlineHelpText>
        <label>Other EEC Licenses?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Outdoor_Playground__c</fullName>
        <description>Is the outdoor/playground portion of your program in compliance with American with Disabilities Act (ADA) requirements?</description>
        <inlineHelpText>Is the outdoor/playground portion of your program in compliance with American with Disabilities Act (ADA) requirements?</inlineHelpText>
        <label>Outdoor/Playground</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preschool_33mo_K__c</fullName>
        <description>Number of Preschool clients</description>
        <inlineHelpText>Enter the number of clients for this age group</inlineHelpText>
        <label>Preschool (33mo-K)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preschool_SA_33mo_8yr__c</fullName>
        <description>Number of Preschool/SA clients</description>
        <inlineHelpText>Enter the number of clients for this age group</inlineHelpText>
        <label>Preschool/SA (33mo-8yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provider_No__c</fullName>
        <description>Licenses are linked to Providers via Provider No</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>School_Age_5yr_14yr__c</fullName>
        <description>Number of School Age clients</description>
        <inlineHelpText>Enter the number of clients for this age group</inlineHelpText>
        <label>School Age (5yr-14yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Year_From__c</fullName>
        <description>The starting month for Provider&apos;s School Year operating schedule</description>
        <inlineHelpText>Select the starting month for the Provider&apos;s School Year operating schedule</inlineHelpText>
        <label>School Year-From:</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_Year_To__c</fullName>
        <description>The ending month for Provider&apos;s School Year operating schedule</description>
        <inlineHelpText>Select the ending month for the Provider&apos;s School Year operating schedule</inlineHelpText>
        <label>School Year-To:</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Provider operation time-of-year value option</description>
        <inlineHelpText>Select if Provider intends to operate only for the school year</inlineHelpText>
        <label>School Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpecialNeeds__c</fullName>
        <description>Special Needs services that Providers can offer their clients</description>
        <label>SpecialNeeds</label>
        <picklist>
            <picklistValues>
                <fullName>ADD/ADHD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma/Allergies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autism Spectrum Disorder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavioral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emotional/Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feeding Tube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hearing Impairment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Condition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parental Incapacity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sensory Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Diet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speech/Language</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Summer_Camp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Other Services Provided option for Large Group and Small Group</description>
        <label>Summer Camp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summer_From__c</fullName>
        <description>The starting month for Provider&apos;s Summer operating schedule</description>
        <inlineHelpText>Select the starting month for the Provider&apos;s Summer operating schedule</inlineHelpText>
        <label>Summer-From:</label>
        <picklist>
            <picklistValues>
                <fullName>Jan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nov</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dec</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>